testdata/invalid/syntax/invalid_token.pact
// Invalid token
component User {
	id: $$$invalid$$$
}
